force-app/main/default/objects/Transfer_Request__c/Transfer_Request__c.object-meta.xml
<CustomObject>
    <description>Custom object for Account Transfer requests.</description>
    <label>Crossover Request</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Transfer Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Crossover Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>