force-app/main/default/objects/Transfer_Request__c/fields/Owner_Field__c.field-meta.xml
<CustomField>
    <fullName>Owner_Field__c</fullName>
    <defaultValue>&quot;Owner&quot;</defaultValue>
    <description>Which Owner Field this request is for.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Which Owner Field this request is for.</inlineHelpText>
    <label>Owner Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>