force-app/main/default/objects/Transfer_Request__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Requestor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>