force-app/main/default/objects/Transfer_Request__c/fields/Send_Request_To__c.field-meta.xml
<CustomField>
    <fullName>Send_Request_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter the User to send the Crossover Request to.</description>
    <inlineHelpText>Enter the User to send the Crossover Request to.</inlineHelpText>
    <label>Send Request To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Crossover_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>