force-app/main/default/objects/Transfer_Request__c/fields/Team_Member_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Member_Role__c</fullName>
    <formula>IF(Owner_Field__c == &apos;HRS_Account_Owner__c&apos;, &apos;HRS 401(k) Partner&apos;,
IF(Owner_Field__c == &apos;Premier_PBS_Account_Owner__c&apos;, &apos;PEO-ASO Partner&apos;,
IF(Owner_Field__c == &apos;OasisPEOAccountOwner__c&apos;, &apos;PEO Centric Rep&apos;,
IF(Owner_Field__c == &apos;HNBF_Account_Owner__c&apos;, &apos;HNBF Partner&apos;,
Owner_Field__c))))</formula>
    <label>Team Member Role</label>
    <type>Text</type>
</CustomField>