force-app/main/default/objects/Transfer_Request__c/validationRules/Crossover_Approval_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>Crossover_Approval_Check</fullName>
    <active>true</active>
    <description>The crossover can not be approved by the creator of the Request.</description>
    <errorConditionFormula>AND(   Auto_Approved__c = false, ISCHANGED(Status__c) , ISPICKVAL( Status__c , &quot;Approved&quot;) , $User.Id =  CreatedById) &amp;&amp; NOT(BEGINS($Profile.Name,&quot;System Administrator&quot;))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>The crossover can not be approved by the creator of the Request.</errorMessage>
</ValidationRule>