force-app/main/default/objects/Transfer_Request__c/validationRules/Declined_Status.validationRule-meta.xml
<ValidationRule>
    <fullName>Declined_Status</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c, &quot;Declined&quot;), ( Reason_For_Rejection__c = NULL))</errorConditionFormula>
    <errorDisplayField>Reason_For_Rejection__c</errorDisplayField>
    <errorMessage>Please provide reason for Rejection</errorMessage>
</ValidationRule>